<resources>
    <string name="app_name">Pick Meet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="toast">toast</string>
    <string name="count">count</string>
    <string name="random">random</string>
    <string name="speaker">speaker</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_recognition_available">\"Speech recognition not available</string>
    <string name="rest_api">Rest API</string>
    <string name="for_debugging">For Debugging</string>
    <string name="camera">Camera</string>
    <string name="new_book">New Book</string>
    <string name="object">New Object</string>
    <string name="pull_data">Pull Data</string>
    <string name="action_create_new_object">New Workshop</string>
    <string name="application_logo">Application Logo</string>
    <string name="action_my_dates">My Dates</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="my_workshops">My Workshops</string>
    <string name="new_workshop">New Workshop</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="title_holder">title Holder</string>
</resources>
