<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/for_debugging"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_toast" />

    <LinearLayout
        android:id="@+id/book_Linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_debug"
        android:orientation="vertical">
    </LinearLayout>

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker"
        app:layout_constraintLeft_toRightOf="@+id/button_toast"
        app:layout_constraintTop_toTopOf="@+id/button_toast"
    />

    <Button
        android:id="@+id/button_rest_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_api"
        app:layout_constraintLeft_toRightOf="@+id/button_speak"
        app:layout_constraintTop_toTopOf="@+id/button_speak"
    />

    <Button
        android:id="@+id/button_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        app:layout_constraintLeft_toRightOf="@+id/button_rest_api"
        app:layout_constraintTop_toTopOf="@+id/button_rest_api"
    />

</androidx.constraintlayout.widget.ConstraintLayout>